Adding the structure of the file

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,9 @@
 <body>
     <div class="output">
         <h1>Find the Book That You Want !!</h1>
-
         <input class="query-search" type="text" placeholder="Search for Your Book">
         <button class="btn">Search</button>
     </div>
-    <script src="./dom.js"></script>
+    <script src="public/dom.js"></script>
 </body>
 </html>
