edit server relates #17

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,11 @@
 <body>
     <div class="output">
         <h1>Find the Book That You Want !!</h1>
-        <input class="query-search" type="text" placeholder="Search for Your Book">
+        <input class="query-search" list="result-list" type="text" placeholder="Search for Your Book">
         <button class="btn">Search</button>
     </div>
+    <div class="books"></div>
     <script src="public/dom.js"></script>
+    <script src="public/request.js"></script>
 </body>
 </html>
